--- a/styleguide/scss/core/_core-helpers.scss
+++ b/styleguide/scss/core/_core-helpers.scss
@@ -8,6 +8,30 @@
 // MIXINS AND FUNCTIONS
 //-----------------------------------------------------------------------//
 
+// Convert vw units to a maximum pixel width.
+@function sf-get-max-elastic-width($elastic-size) {
+
+    // If max (elastic) screen width is set, use it
+    // to stop the object from growing in size past that point
+    @if ($elastic-breakpoint and $elastic-size) {
+
+        @if (sf-str-endswith($elastic-size, "rem")) {
+
+            @return rem($elastic-size);
+
+        } @else {
+
+            $max : sf-strip-unit($elastic-breakpoint) * (sf-strip-unit($elastic-size) / 100);
+  
+            @return $max + unquote("px");
+        }
+
+    } @else {
+
+        @return 0 + unquote("px");
+    }
+}
+
 // Hide and element from everything.
 @mixin sf-hide (
     $from:false, 
