TOC is now global and consolidated

--- a/styleguide/scss/styleguide.scss
+++ b/styleguide/scss/styleguide.scss
@@ -62,6 +62,19 @@ body {
                 }
             }
 
+            #toc {
+                
+                & > li {
+
+                    ol[role="directory"] {
+
+                        &:empty {
+                            display: none;
+                        }
+                    }
+                }
+            }
+
             &#toc-headlines {
 
                 article[role="list"] {
