Added get started page

--- a/styleguide/scss/_config-typography.scss
+++ b/styleguide/scss/_config-typography.scss
@@ -5,7 +5,7 @@
 // REQUIRED: Font stacks
 $font-body: -apple-system, BlinkMacSystemFont, Helvetica, Calibri, Arial, sans-serif;
 $font-mono: -apple-system-mono, 'Menlo', 'Consolas', 'Monaco', 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', 'Courier', 'Courier New', monospace;
-$font-head: 'Quicksand', -apple-system-headline, Helvetica, Calibri, Arial, sans-serif;
+$font-head: $font-body;
 
 // REQUIRED: Base font sizes and line heights
 // Use vw units, no unit type for line heights
